# SPClaw

./: .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml
config/: file-bridge.json  md_tmt_seed_universe.csv  runtime-defaults.json
docs/: email-integration.md  file-management-system.md  laptop-codex-openclaw-workflow.md  openclaw-runtime.md
docs/handoffs/: agent-board-seat.md  agent-chart-day.md  agent-hf-analyst.md  agent-market-daily.md  current-plan.md  live-session.md  ship-template.md  state-of-build.md
docs/memory-inbox/: queue.md  reconciliation-ledger.csv
scripts/: openclaw_slack_audit.py  openclaw_slack_probe.py
skills/valuation-charting/: SKILL.md
src/coatue_claw/: board_seat_daily.py  chart_intent.py  chart_title_context.py  cli.py  hf_analyst.py  (+27 more)
tests/: test_board_seat_daily.py  test_chart_intent.py  test_chart_title_context.py  test_dev_buzz.py  test_diligence_report.py  test_email_gateway.py  test_file_bridge.py  test_hf_analyst.py  test_hf_document_extract.py  test_hf_podcast.py  test_hf_prompt_contract.py  test_hf_youtube_transcript.py  test_itar_scope.py  test_launchd_runtime.py  test_market_daily.py  test_memory_extraction.py  test_memory_runtime.py  test_memory_store.py  test_runtime_settings.py  test_slack_bot_board_seat_routing.py  test_slack_channel_access.py  test_slack_config_intent.py  test_slack_file_ingest.py  test_slack_pipeline.py  test_slack_pipeline_intent.py  test_slack_routing.py  test_slack_x_chart_intent.py  test_slack_x_intent.py  test_spencer_change_digest.py  test_spencer_change_log.py  test_universe_store.py  test_valuation_chart.py  test_x_chart_daily.py  test_x_digest.py
(+34 files in other folders)
